Updates to pricing and services

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="has-navbar-fixed-top">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kingdom Application Solutions</title>
+        <title>Kingdom Application Solutions LLC</title>
         <script src="./scripts/scripts.js"></script>
         <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="icon" href="./images/favicon.ico" />
@@ -40,11 +40,14 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/apps.html">
                                 Mobile Apps
                             </a>
-                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
-                                Online Tools
-                            </a> -->
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
+                            </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                                Online Tools
+                            </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
+                                Graphic Design
                             </a>
                         </div>
                     </div>
@@ -98,81 +101,117 @@
 
         <section class="hero section-padding">
             <div class="hero-body">
-                <!-- <div class="container"> -->
-                    <div class="columns is-centered">
-                        <div class="column is-half is-centered">
-                            <h2 class="subtitle privacy-h3">
-                                Who We Are
-                            </h2>
-                            <h4 class="subtitle">
-                                We are a software development company that strives to glorify God through the creation and distribution of quality mobile apps, online software tools, and websites for churches, Christian ministries, and individual Christians.
-                            </h4>
-                            <h4 class="subtitle">
-                                Our four core values are:
-                            </h4>
-                            <div class="content">
-                                <ol class="ol">
-                                    <li>Excellence in Everything</li>
-                                    <li>Integrity and Honesty</li>
-                                    <li>Christ Exalting</li>
-                                    <li>Kingdom Focused</li>
-                                </ol>
-                            </div>
-                            <a class="button info-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
-                                <b>Learn More</b>
-                            </a>
-                        </div><br>
-                        <div class="column">
-                            <img class="image-home" src="./images/about.png" alt="Who we are">
+                <div class="columns is-centered">
+                    <div class="column is-half is-centered">
+                        <h2 class="subtitle privacy-h3">
+                            Who We Are
+                        </h2>
+                        <h4 class="subtitle">
+                            We are a software development company that strives to glorify God through the creation and distribution of quality mobile apps, online software tools, and websites for churches, Christian ministries, and individual Christians.
+                        </h4>
+                        <h4 class="subtitle">
+                            Our four core values are:
+                        </h4>
+                        <div class="content">
+                            <ol class="ol">
+                                <li>Excellence in Everything</li>
+                                <li>Integrity and Honesty</li>
+                                <li>Christ Exalting</li>
+                                <li>Kingdom Focused</li>
+                            </ol>
                         </div>
-                    </div>
-                <!-- </div> -->
-            </div>
-        </section><hr>
-
-        <section class="hero section-padding">
-            <div class="hero-body">
-                <!-- <div class="container"> -->
-                    <div class="columns is-centered">
-                        <div class="column is-half">
-                            <img src="./images/websites.png" alt="Website development">
-                        </div>
-                        <div class="column">
-                            <h2 class="subtitle privacy-h3">
-                                Website Development
-                            </h2>
-                            <h4 class="subtitle">
-                                We offer the design and development of custom websites for churches, Christian ministries, or individual Christians. We also offer the creation of websites through popular content manangement options.
-                            </h4>
-                            <a class="button info-button" href="https://kingdomappsolutions.tech/websites.html">
-                                <b>Learn More</b>
-                            </a>
-                        </div>
-                    </div>
-                <!-- </div> -->
-            </div>
-        </section><hr>
-
-        <section class="hero section-padding">
-            <div class="hero-body">
-                <!-- <div class="container"> -->
-                    <div class="columns is-centered">
-                        <div class="column is-half">
-                            <h2 class="subtitle privacy-h3">
-                                Mobile Apps
-                            </h2>
-                            <h4 class="subtitle">
-                                We offer mobile apps that provide opportunities for churches, Christian ministries, or individual Christians to use day-to-day in their lives to aid in deeping their walk with Jesus as well as aiding in leading others to faith in Jesus. These mobile apps are developed for both Android and Apple and deployed to the Google Play Store and/or the Apple App Store.
-                            </h4>
-                            <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
+                        <a class="button info-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
                             <b>Learn More</b>
-                            </a>
-                        </div><br>
-                        <div class="column">
-                            <img class="image-home" src="./images/apps.png" alt="Mobile apps">
-                        </div>
+                        </a>
+                    </div><br>
+                    <div class="column">
+                        <img class="image-home" src="./images/about.png" alt="Who we are">
                     </div>
-                <!-- </div> -->
+                </div>
+            </div>
+        </section><hr>
+
+        <section class="hero section-padding">
+            <div class="hero-body">
+                <div class="columns is-centered">
+                    <div class="column is-half">
+                        <img src="./images/apps.png" alt="Mobile apps">
+                    </div>
+                    <div class="column">
+                        <h2 class="subtitle privacy-h3">
+                            Mobile Apps
+                        </h2>
+                        <h4 class="subtitle">
+                            We offer mobile apps that provide opportunities for churches, Christian ministries, or individual Christians to use day-to-day in their lives to aid in deeping their walk with Jesus as well as aiding in leading others to faith in Jesus. These mobile apps are developed for both Android and Apple and deployed to the Google Play Store and/or the Apple App Store.
+                        </h4>
+                        <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
+                        <b>Learn More</b>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section><hr>
+
+        <section class="hero section-padding">
+            <div class="hero-body">
+                <div class="columns is-centered">
+                    <div class="column is-half">
+                        <h2 class="subtitle privacy-h3">
+                            Website Development
+                        </h2>
+                        <h4 class="subtitle">
+                            We offer the design and development of custom websites for churches, Christian ministries, or individual Christians. We also offer the creation of websites through popular content manangement options.
+                        </h4>
+                        <a class="button info-button" href="https://kingdomappsolutions.tech/websites.html">
+                            <b>Learn More</b>
+                        </a>
+                    </div><br>
+                    <div class="column">
+                        <img class="image-home" src="./images/websites.png" alt="Website development">
+                    </div>
+                </div>
+            </div>
+        </section><hr>
+
+        <section class="hero section-padding">
+            <div class="hero-body">
+                <div class="columns is-centered">
+                    <div class="column is-half">
+                        <img src="./images/tools.png" alt="Mobile apps">
+                    </div>
+                    <div class="column">
+                        <h2 class="subtitle privacy-h3">
+                            Online Software Tools
+                        </h2>
+                        <h4 class="subtitle">
+                            We offer online software tools which are designed to bring you deeper into a relationship with Jesus Christ and give you the tools to lead others deeper as well. These online tools will be available through subscriptions (billed annually) for each of the available tools or in bundle deals.
+                        </h4>
+                        <a class="button info-button" href="https://kingdomappsolutions.tech/tools.html">
+                        <b>Learn More</b>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section><hr>
+
+        <section class="hero section-padding">
+            <div class="hero-body">
+                <div class="columns is-centered">
+                    <div class="column is-half">
+                        <h2 class="subtitle privacy-h3">
+                            Graphic Design
+                        </h2>
+                        <h4 class="subtitle">
+                            We offer a wide range of graphic design options. Custom graphic design for your church or ministry can enable you to effectively communicate with your church, give out information about your church, and connect others with Jesus Christ.
+                        </h4>
+                        <a class="button info-button" href="https://kingdomappsolutions.tech/graphic-design.html">
+                            <b>Learn More</b>
+                        </a>
+                    </div><br>
+                    <div class="column">
+                        <img class="image-home" src="./images/design.png" alt="Website development">
+                    </div>
+                </div>
             </div>
         </section>
 
