--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -40,11 +40,14 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/apps.html">
                                 Mobile Apps
                             </a>
-                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
-                                Online Tools
-                            </a> -->
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
+                            </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                                Online Tools
+                            </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
+                                Graphic Design
                             </a>
                         </div>
                     </div>
@@ -88,7 +91,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        The Mission, Vision, and Values of Kingdom Application Solutions
+                        The Mission, Vision, and Values of Kingdom Application Solutions LLC
                     </h1>
                     <img class="home-image" src="./images/header.png" width="300" alt="Logo">
                 </div>
@@ -97,87 +100,85 @@
         
         <section class="hero section-padding">
             <div class="hero-body">
-                <!-- <div class="container"> -->
-                    <h1 class="title">
-                        Our Mission
-                    </h1>
-                    <p></p>
-                    <h2 class="subtitle">
-                        Kingdom Application Solutions exists to glorify God through the creation and distribution of quality mobile apps, online software tools, and websites for churches, Christian ministries, and individual Christians.
-                    </h2><br><hr>
-                    <h1 class="title">
-                        Our Vision
-                    </h1>
-                    <p></p>
-                    <h2 class="subtitle">
-                        Kingdom Application Solutions envisions a global impact from its mobile apps and online software tools to aid in bringing people into a saving relationship with Jesus and helping other followers of Jesus to grow in their faith.
-                    </h2><br><hr>
-                    <h1 class="title">
-                        Our Values
-                    </h1>
-                    <p></p>
-                    <h2 class="subtitle">
-                        Kingdom Application Solutions has four main core values:
-                    </h2>
-                    <div class="columns">
-                        <div class="column">
-                            <div class="card">
-                                <header class="card-header">
-                                    <p class="card-header-title is-centered">
-                                        Excellence in Everything
-                                    </p>
-                                </header>
-                                <div class="card-content">
-                                    <div class="content">
-                                        Excellence in everything means we go out of our way to ensure that every app or piece of software is fully functional and provides a quality user experience. Excellence reflects our commitment to glorify Christ and to do all things in his name (Col. 3:17).
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="card">
-                                <header class="card-header">
-                                    <p class="card-header-title is-centered">
-                                        Integrity and Honesty
-                                    </p>
-                                </header>
-                                <div class="card-content">
-                                    <div class="content">
-                                        Integrity and honesty are two sides of the same coin. To have integrity is to be honest and have strong moral principles. Being honest with strong moral principles demonstrates our devotion to Christ and to act honorably in all things (Heb. 13:18).
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="card">
-                                <header class="card-header">
-                                    <p class="card-header-title is-centered">
-                                        Christ Exalting
-                                    </p>
-                                </header>
-                                <div class="card-content">
-                                    <div class="content">
-                                        To exalt Christ in all things is the goal of every piece of software that we offer. This value drives our mission and vision so that Christ would be exalted, his name made great through the software we offer, and people would grow to be like him (Phil. 2:9-10).
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="card">
-                                <header class="card-header">
-                                    <p class="card-header-title is-centered">
-                                        Kingdom Focused
-                                    </p>
-                                </header>
-                                <div class="card-content">
-                                    <div class="content">
-                                        As our name implies, we are a kingdom focused company that seeks to help churches, Christian ministries, and individual Christians through the creation of software. Seeking his kingdom and growing the kingdom is what we are all about (Matt. 6:33)!
-                                    </div>
+                <h1 class="title">
+                    Our Mission
+                </h1>
+                <p></p>
+                <h2 class="subtitle">
+                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps, online software tools, graphic design, and websites for churches, Christian ministries, and individual Christians.
+                </h2><br><hr>
+                <h1 class="title">
+                    Our Vision
+                </h1>
+                <p></p>
+                <h2 class="subtitle">
+                    Kingdom Application Solutions LLC envisions a global impact from its mobile apps, online software tools, graphic design, and websites to aid in bringing people into a saving relationship with Jesus and helping other followers of Jesus to grow in their faith.
+                </h2><br><hr>
+                <h1 class="title">
+                    Our Values
+                </h1>
+                <p></p>
+                <h2 class="subtitle">
+                    Kingdom Application Solutions LLC has four main core values:
+                </h2>
+                <div class="columns">
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    Excellence in Everything
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    Excellence in everything means we go out of our way to ensure that every app or piece of software is fully functional and provides a quality user experience. Excellence reflects our commitment to glorify Christ and to do all things in his name (Col. 3:17).
                                 </div>
                             </div>
                         </div>
                     </div>
-                <!-- </div>     -->
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    Integrity and Honesty
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    Integrity and honesty are two sides of the same coin. To have integrity is to be honest and have strong moral principles. Being honest with strong moral principles demonstrates our devotion to Christ and to act honorably in all things (Heb. 13:18).
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    Christ Exalting
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    To exalt Christ in all things is the goal of every piece of software that we offer. This value drives our mission and vision so that Christ would be exalted, his name made great through the software we offer, and people would grow to be like him (Phil. 2:9-10).
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    Kingdom Focused
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    As our name implies, we are a kingdom focused company that seeks to help churches, Christian ministries, and individual Christians through the creation of software. Seeking his kingdom and growing the kingdom is what we are all about (Matt. 6:33)!
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>     
         </section>
 
