--- a/products-services.html
+++ b/products-services.html
@@ -40,11 +40,14 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/apps.html">
                                 Mobile Apps
                             </a>
-                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
-                                Online Tools
-                            </a> -->
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
+                            </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                                Online Tools
+                            </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
+                                Graphic Design
                             </a>
                         </div>
                     </div>
@@ -98,65 +101,80 @@
         
         <section class="hero section-padding">
             <div class="hero-body">
-                <!-- <div class="container"> -->
-                    <!-- <h1 class="title">
-                        Products and Services We Offer
-                    </h1>
-                    <p></p> -->
-                    <h2 class="subtitle privacy-h2">
-                        Presently, we offer two main products and services at Kingdom Application Solutions: mobile apps and websites for churches and/or ministries. Each of these products and services has the goal of leading others to faith in Christ and helping one another to grow in Christ-likeness. Click the link in each card below for more information for each of the products or services we offer.
-                    </h2><br>
-                    <div class="columns is-centered">
-                        <div class="column is-half">
-                            <div class="card">
-                                <header class="card-header">
-                                    <p class="card-header-title is-centered">
-                                        <i class="fa-solid fa-mobile-screen"></i>
-                                        Android & Apple Mobile Apps
-                                    </p>
-                                </header>
-                                <div class="card-content">
-                                    <div class="content">
-                                        We offer mobile apps that provide opportunities for churches, Christian ministries, or individual Christians to use day-to-day in their lives to aid in deeping their walk with Jesus as well as aiding in leading others to faith in Jesus. These mobile apps are developed for both Android and Apple and deployed to the Google Play Store and/or the Apple App Store. <br><br> Several apps are in production and one has already been published on the app stores. Click <u><a href="https://kingdomappsolutions.tech/apps.html">here</a></u> to see more information about the types of mobile apps we offer as well as pricing information for custom mobile development packages we offer. <br><br> For examples of the apps we currently offer, click the buttons below to be taken to the respective app store pages.<br>
-                                    </div>
+                <h2 class="subtitle privacy-h2">
+                    Presently, we offer four main products and services at Kingdom Application Solutions LLC: mobile apps for churches, ministries, and/or individuals, websites for churches, ministries, and/or individuals, online tools for growth and discipleship, and graphic design. Each of these products and services has the goal of leading others to faith in Christ and helping one another to grow in Christ-likeness. Click the link in each card below for more information for each of the products or services we offer.
+                </h2><br>
+                <div class="columns is-centered">
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-mobile-screen"></i>
+                                    Mobile App Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    We offer mobile apps that provide opportunities for churches, Christian ministries, or individual Christians to use day-to-day in their lives to aid in deeping their walk with Jesus as well as aiding in leading others to faith in Jesus. These mobile apps are developed for both Android and Apple and deployed to the Google Play Store and/or the Apple App Store. <br><br> Several apps are in production and one has already been published on the app stores. Click <u><a href="https://kingdomappsolutions.tech/apps.html">here</a></u> to see more information about the types of mobile apps we offer as well as pricing information for custom mobile development packages we offer. <br><br> For examples of the apps we currently offer, click the buttons below to be taken to the respective app store pages.<br>
                                 </div>
-                                <footer class="card-footer">
-                                    <a class="card-footer-item" href='https://play.google.com/store/apps/dev?id=6176031387559591020' target="_blank"><img src='./images/google.png' style="width: 300px;" alt="Google Play Store"></a>
-                                    <a class="card-footer-item" href="https://apps.apple.com/us/developer/kingdom-application-solutions-llc/id1549908448" target="_blank"><img src="./images/apple.png" style="width: 300px;" alt="Apple App Store"></a>
-                                </footer>                    
                             </div>
+                            <footer class="card-footer">
+                                <a class="card-footer-item" href='https://play.google.com/store/apps/dev?id=6176031387559591020' target="_blank"><img src='./images/google.png' style="width: 300px;" alt="Google Play Store"></a>
+                                <a class="card-footer-item" href="https://apps.apple.com/us/developer/kingdom-application-solutions-llc/id1549908448" target="_blank"><img src="./images/apple.png" style="width: 300px;" alt="Apple App Store"></a>
+                            </footer>                    
                         </div>
-                        <!-- <div class="column">
-                            <div class="card">
-                                <header class="card-header">
-                                    <p class="card-header-title is-centered">
-                                        Online Software Tools
-                                    </p>
-                                </header>
-                                <div class="card-content">
-                                    <div class="content">
-                                        Online software tools that foster discipleship, allow individuals to grow in their faith, and give churches and other Christian ministries the tools necessary for various ministry tasks are also offered by Kingdom Application Solutions. These tools are still in production and will be released at a later time, but you can click <a href="https://kingdomappsolutions.tech/tools.html"><u>here</u></a> to learn more about the various tools we will offer as well as their pricing structures. 
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
-                        <div class="column">
-                            <div class="card">
-                                <header class="card-header">
-                                    <p class="card-header-title is-centered">
-                                        <i class="fa-solid fa-laptop"></i>
-                                        Websites for Churches or Ministries
-                                    </p>
-                                </header>
-                                <div class="card-content">
-                                    <div class="content">
-                                        We offer the design and development of custom websites for churches, Christian ministries, or individual Christians. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs. <br><br> We also offer the creation of websites through popular content manangement options such as WordPress or Weebly (Square) if that fits your needs better for easy updating. Click <u><a href="https://kingdomappsolutions.tech/websites.html">here</a></u> for information about website development pricing for both custom and content management systems.<br>
-                                    </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-laptop"></i>
+                                    Website Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    We offer the design and development of custom websites for churches, Christian ministries, or individual Christians. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs. <br><br> We also offer the creation of websites through popular content manangement options such as WordPress or Weebly (Square) if that fits your needs better for easy updating. Click <u><a href="https://kingdomappsolutions.tech/websites.html">here</a></u> for information about website development pricing for both custom and content management systems.<br>
                                 </div>
                             </div>
                         </div>
                     </div>
-                <!-- </div> -->
+                </div>
+
+                <div class="columns is-centered">
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-screwdriver-wrench"></i>
+                                    Online Software Tools
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    Online software tools that foster discipleship, allow individuals to grow in their faith, and give churches and other Christian ministries the tools necessary for various ministry tasks are also offered by Kingdom Application Solutions LLC. These tools are still in production and will be released at a later time, but you can click <a href="https://kingdomappsolutions.tech/tools.html"><u>here</u></a> to learn more about the various tools we will offer as well as their pricing structures. 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-compass-drafting"></i>
+                                    Graphic Design
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    Graphic design that gives your church or ministry its distinctive look and feel. Whether you need a logo, printable graphics, or social media graphics, we can help! Quality graphic work allows your church or ministry to stand apart from the rest and make a greater impact for the kingdom! Click <a href="https://kingdomappsolutions.tech/graphic-design.html"><u>here</u></a> to learn more about our graphic design options.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
