--- a/success.html
+++ b/success.html
@@ -40,11 +40,14 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/apps.html">
                                 Mobile Apps
                             </a>
-                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
-                                Online Tools
-                            </a> -->
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
+                            </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                                Online Tools
+                            </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
+                                Graphic Design
                             </a>
                         </div>
                     </div>
@@ -87,15 +90,13 @@
         
         <section class="hero is-medium section-padding">
             <div class="hero-body">
-                <!-- <div class="container"> -->
-                    <h1 class="title">
-                        Form Successful!
-                    </h1>
-                    <p></p>
-                    <h2 class="subtitle">
-                        Thank you for contacting us! We will contact you as soon as possible regarding your request!
-                    </h2>
-                <!-- </div> -->
+                <h1 class="title">
+                    Form Successful!
+                </h1>
+                <p></p>
+                <h2 class="subtitle">
+                    Thank you for contacting us! We will contact you as soon as possible regarding your request!
+                </h2>
             </div>
         </section>
           
